@@ -12,6 +12,6 @@ t1 = arange(0.0, 5.0, .2)
 l = plot(t1, f(t1), 'ro')
 set(l, 'markersize', 30)
 set(l, 'markerfacecolor', 'b')
-#savefig('arctest', dpi=150)
+savefig('arctest', dpi=150)
 show()
 
