@@ -451,13 +451,13 @@ Image::write_png(const Py::Tuple& args)
   info_ptr = png_create_info_struct(png_ptr);
   if (info_ptr == NULL) {
     fclose(fp);
-    png_destroy_write_struct(&png_ptr, (png_infopp)NULL);
+    png_destroy_write_struct(&png_ptr, &info_ptr);
     throw Py::RuntimeError("could not create info struct");
   }
   
   if (setjmp(png_ptr->jmpbuf)) {
     fclose(fp);
-    png_destroy_write_struct(&png_ptr, (png_infopp)NULL);
+    png_destroy_write_struct(&png_ptr, &info_ptr);
     throw Py::RuntimeError("error building image");
   }
   
@@ -479,7 +479,7 @@ Image::write_png(const Py::Tuple& args)
   png_write_info(png_ptr, info_ptr);
   png_write_image(png_ptr, row_pointers);
   png_write_end(png_ptr, info_ptr);
-  png_destroy_write_struct(&png_ptr, (png_infopp)NULL);
+  png_destroy_write_struct(&png_ptr, &info_ptr);
   fclose(fp);
   
   return Py::Object();
