@@ -1,5 +1,10 @@
 New entries should be added at the top
 
+2004-07-27 did a readthrough of SVG, replacing all the string
+           additions with string interps for efficiency, fixed some
+           layout problems, added font and image support (through
+           external pngs) - JDH
+
 2004-07-25 backend_gtk.py: modify toolbar2 to make it easier to support GTK+ 
            2.4. Add GTK+ 2.4 toolbar support. - SC
 
